common_files/latexp3c.output
Terminals unused in grammar

   BACKSL
   INTEGER
   NEWLINE


State 7 conflicts: 2 shift/reduce
State 11 conflicts: 2 shift/reduce
State 30 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 82 conflicts: 4 reduce/reduce


Grammar

    0 $accept: latexstatement $end

    1 latexstatement: startdoc mainbody enddoc

    2 startdoc: LBEGIN DOCUMENT

    3 enddoc: END DOCUMENT

    4 mainbody: mainbody mainoption
    5         | mainoption

    6 mainoption: textoption
    7           | commentoption
    8           | latexoptions

    9 textoption: textoption wsorword
   10           | wsorword

   11 wsorword: WS
   12         | WORD

   13 commentoption: SPECCHAR textoption

   14 latexoptions: backsoptions
   15             | LCURLYB curlyboptions RCURLYB

   16 curlyboptions: RM textoption
   17              | IT textoption

   18 backsoptions: beginendopts
   19             | sectionoptions
   20             | tableofcont
   21             | linespacing
   22             | pagenumbers
   23             | pagenuminit
   24             | spacing
   25             | fonts
   26             | specialchar
   27             | nonewpara
   28             | reference

   29 beginendopts: LBEGIN begcmds beginblock endbegin

   30 begcmds: CENTER
   31        | VERBATIM
   32        | SINGLE
   33        | ITEMIZE
   34        | ENUMERATE
   35        | TABLE begtableopts
   36        | TABULAR begtabularopts

   37 endbegin: END endcmds
   38         | endtableopts TABLE

   39 endcmds: CENTER
   40        | VERBATIM
   41        | SINGLE
   42        | ITEMIZE
   43        | ENUMERATE
   44        | TABULAR

   45 beginblock: beginendopts
   46           | textoption
   47           | entrylist
   48           | listblock

   49 listblock: listblock anitem
   50          | anitem

   51 anitem: ITEM textoption
   52       | beginendopts

   53 entrylist: entrylist anentry
   54          | anentry

   55 anentry: entry DBLBS
   56        | beginendopts

   57 entry: entry SPECCHAR textoption
   58      | textoption

   59 begtableopts: LSQRB position RSQRB

   60 begtabularopts: LCURLYB COLS RCURLYB

   61 position: H
   62         | T
   63         | B

   64 endtableopts: END
   65             | CAPTION LCURLYB textoption RCURLYB captionrest
   66             | labelrest

   67 captionrest: END
   68            | labelrest

   69 labelrest: LABEL LCURLYB WORD RCURLYB END

   70 sectionoptions: SECTION LCURLYB textoption RCURLYB
   71               | SUBSEC LCURLYB textoption RCURLYB

   72 tableofcont: TABOCON

   73 linespacing: RENEW LCURLYB BASELINES RCURLYB LCURLYB WORD RCURLYB

   74 pagenumbers: PAGENUM style2

   75 style2: ARABIC2
   76       | LROMAN2
   77       | CROMAN2
   78       | LALPH2
   79       | CALPH2

   80 $@1: /* empty */

   81 pagenuminit: style1 LCURLYB WORD $@1 RCURLYB

   82 style1: ARABIC1
   83       | LROMAN1
   84       | CROMAN1
   85       | LALPH1
   86       | CALPH1

   87 $@2: /* empty */

   88 spacing: VSPACE LCURLYB WORD $@2 RCURLYB

   89 $@3: /* empty */

   90 spacing: HSPACE LCURLYB WORD $@3 RCURLYB

   91 fonts: RM
   92      | IT

   93 specialchar: SPECCHAR
   94            | LCURLYB
   95            | RCURLYB

   96 nonewpara: NOINDENT

   97 reference: REF LCURLYB WORD RCURLYB


Terminals, with rules where they appear

$end (0) 0
error (256)
BACKSL (258)
LBEGIN (259) 2 29
LCURLYB (260) 15 60 65 69 70 71 73 81 88 90 94 97
DOCUMENT (261) 2 3
RCURLYB (262) 15 60 65 69 70 71 73 81 88 90 95 97
END (263) 3 37 64 67 69
WORD (264) 12 69 73 81 88 90 97
WS (265) 11
SPECCHAR (266) 13 57 93
CENTER (267) 30 39
VERBATIM (268) 31 40
SINGLE (269) 32 41
ITEMIZE (270) 33 42
ENUMERATE (271) 34 43
TABULAR (272) 36 44
TABLE (273) 35 38
LSQRB (274) 59
RSQRB (275) 59
H (276) 61
T (277) 62
B (278) 63
COLS (279) 60
CAPTION (280) 65
LABEL (281) 69
DBLBS (282) 55
ITEM (283) 51
SECTION (284) 70
SUBSEC (285) 71
TABOCON (286) 72
RENEW (287) 73
BASELINES (288) 73
PAGENUM (289) 74
INTEGER (290)
ARABIC1 (291) 82
LROMAN1 (292) 83
CROMAN1 (293) 84
LALPH1 (294) 85
CALPH1 (295) 86
VSPACE (296) 88
HSPACE (297) 90
RM (298) 16 91
IT (299) 17 92
NOINDENT (300) 96
REF (301) 97
ARABIC2 (302) 75
LROMAN2 (303) 76
CROMAN2 (304) 77
LALPH2 (305) 78
CALPH2 (306) 79
NEWLINE (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
latexstatement (54)
    on left: 1, on right: 0
startdoc (55)
    on left: 2, on right: 1
enddoc (56)
    on left: 3, on right: 1
mainbody (57)
    on left: 4 5, on right: 1 4
mainoption (58)
    on left: 6 7 8, on right: 4 5
textoption (59)
    on left: 9 10, on right: 6 9 13 16 17 46 51 57 58 65 70 71
wsorword (60)
    on left: 11 12, on right: 9 10
commentoption (61)
    on left: 13, on right: 7
latexoptions (62)
    on left: 14 15, on right: 8
curlyboptions (63)
    on left: 16 17, on right: 15
backsoptions (64)
    on left: 18 19 20 21 22 23 24 25 26 27 28, on right: 14
beginendopts (65)
    on left: 29, on right: 18 45 52 56
begcmds (66)
    on left: 30 31 32 33 34 35 36, on right: 29
endbegin (67)
    on left: 37 38, on right: 29
endcmds (68)
    on left: 39 40 41 42 43 44, on right: 37
beginblock (69)
    on left: 45 46 47 48, on right: 29
listblock (70)
    on left: 49 50, on right: 48 49
anitem (71)
    on left: 51 52, on right: 49 50
entrylist (72)
    on left: 53 54, on right: 47 53
anentry (73)
    on left: 55 56, on right: 53 54
entry (74)
    on left: 57 58, on right: 55 57
begtableopts (75)
    on left: 59, on right: 35
begtabularopts (76)
    on left: 60, on right: 36
position (77)
    on left: 61 62 63, on right: 59
endtableopts (78)
    on left: 64 65 66, on right: 38
captionrest (79)
    on left: 67 68, on right: 65
labelrest (80)
    on left: 69, on right: 66 68
sectionoptions (81)
    on left: 70 71, on right: 19
tableofcont (82)
    on left: 72, on right: 20
linespacing (83)
    on left: 73, on right: 21
pagenumbers (84)
    on left: 74, on right: 22
style2 (85)
    on left: 75 76 77 78 79, on right: 74
pagenuminit (86)
    on left: 81, on right: 23
$@1 (87)
    on left: 80, on right: 81
style1 (88)
    on left: 82 83 84 85 86, on right: 81
spacing (89)
    on left: 88 90, on right: 24
$@2 (90)
    on left: 87, on right: 88
$@3 (91)
    on left: 89, on right: 90
fonts (92)
    on left: 91 92, on right: 25
specialchar (93)
    on left: 93 94 95, on right: 26
nonewpara (94)
    on left: 96, on right: 27
reference (95)
    on left: 97, on right: 28


state 0

    0 $accept: . latexstatement $end

    LBEGIN  shift, and go to state 1

    latexstatement  go to state 2
    startdoc        go to state 3


state 1

    2 startdoc: LBEGIN . DOCUMENT

    DOCUMENT  shift, and go to state 4


state 2

    0 $accept: latexstatement . $end

    $end  shift, and go to state 5


state 3

    1 latexstatement: startdoc . mainbody enddoc

    LBEGIN    shift, and go to state 6
    LCURLYB   shift, and go to state 7
    RCURLYB   shift, and go to state 8
    WORD      shift, and go to state 9
    WS        shift, and go to state 10
    SPECCHAR  shift, and go to state 11
    SECTION   shift, and go to state 12
    SUBSEC    shift, and go to state 13
    TABOCON   shift, and go to state 14
    RENEW     shift, and go to state 15
    PAGENUM   shift, and go to state 16
    ARABIC1   shift, and go to state 17
    LROMAN1   shift, and go to state 18
    CROMAN1   shift, and go to state 19
    LALPH1    shift, and go to state 20
    CALPH1    shift, and go to state 21
    VSPACE    shift, and go to state 22
    HSPACE    shift, and go to state 23
    RM        shift, and go to state 24
    IT        shift, and go to state 25
    NOINDENT  shift, and go to state 26
    REF       shift, and go to state 27

    mainbody        go to state 28
    mainoption      go to state 29
    textoption      go to state 30
    wsorword        go to state 31
    commentoption   go to state 32
    latexoptions    go to state 33
    backsoptions    go to state 34
    beginendopts    go to state 35
    sectionoptions  go to state 36
    tableofcont     go to state 37
    linespacing     go to state 38
    pagenumbers     go to state 39
    pagenuminit     go to state 40
    style1          go to state 41
    spacing         go to state 42
    fonts           go to state 43
    specialchar     go to state 44
    nonewpara       go to state 45
    reference       go to state 46


state 4

    2 startdoc: LBEGIN DOCUMENT .

    $default  reduce using rule 2 (startdoc)


state 5

    0 $accept: latexstatement $end .

    $default  accept


state 6

   29 beginendopts: LBEGIN . begcmds beginblock endbegin

    CENTER     shift, and go to state 47
    VERBATIM   shift, and go to state 48
    SINGLE     shift, and go to state 49
    ITEMIZE    shift, and go to state 50
    ENUMERATE  shift, and go to state 51
    TABULAR    shift, and go to state 52
    TABLE      shift, and go to state 53

    begcmds  go to state 54


state 7

   15 latexoptions: LCURLYB . curlyboptions RCURLYB
   94 specialchar: LCURLYB .

    RM  shift, and go to state 55
    IT  shift, and go to state 56

    RM        [reduce using rule 94 (specialchar)]
    IT        [reduce using rule 94 (specialchar)]
    $default  reduce using rule 94 (specialchar)

    curlyboptions  go to state 57


state 8

   95 specialchar: RCURLYB .

    $default  reduce using rule 95 (specialchar)


state 9

   12 wsorword: WORD .

    $default  reduce using rule 12 (wsorword)


state 10

   11 wsorword: WS .

    $default  reduce using rule 11 (wsorword)


state 11

   13 commentoption: SPECCHAR . textoption
   93 specialchar: SPECCHAR .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    WORD      [reduce using rule 93 (specialchar)]
    WS        [reduce using rule 93 (specialchar)]
    $default  reduce using rule 93 (specialchar)

    textoption  go to state 58
    wsorword    go to state 31


state 12

   70 sectionoptions: SECTION . LCURLYB textoption RCURLYB

    LCURLYB  shift, and go to state 59


state 13

   71 sectionoptions: SUBSEC . LCURLYB textoption RCURLYB

    LCURLYB  shift, and go to state 60


state 14

   72 tableofcont: TABOCON .

    $default  reduce using rule 72 (tableofcont)


state 15

   73 linespacing: RENEW . LCURLYB BASELINES RCURLYB LCURLYB WORD RCURLYB

    LCURLYB  shift, and go to state 61


state 16

   74 pagenumbers: PAGENUM . style2

    ARABIC2  shift, and go to state 62
    LROMAN2  shift, and go to state 63
    CROMAN2  shift, and go to state 64
    LALPH2   shift, and go to state 65
    CALPH2   shift, and go to state 66

    style2  go to state 67


state 17

   82 style1: ARABIC1 .

    $default  reduce using rule 82 (style1)


state 18

   83 style1: LROMAN1 .

    $default  reduce using rule 83 (style1)


state 19

   84 style1: CROMAN1 .

    $default  reduce using rule 84 (style1)


state 20

   85 style1: LALPH1 .

    $default  reduce using rule 85 (style1)


state 21

   86 style1: CALPH1 .

    $default  reduce using rule 86 (style1)


state 22

   88 spacing: VSPACE . LCURLYB WORD $@2 RCURLYB

    LCURLYB  shift, and go to state 68


state 23

   90 spacing: HSPACE . LCURLYB WORD $@3 RCURLYB

    LCURLYB  shift, and go to state 69


state 24

   91 fonts: RM .

    $default  reduce using rule 91 (fonts)


state 25

   92 fonts: IT .

    $default  reduce using rule 92 (fonts)


state 26

   96 nonewpara: NOINDENT .

    $default  reduce using rule 96 (nonewpara)


state 27

   97 reference: REF . LCURLYB WORD RCURLYB

    LCURLYB  shift, and go to state 70


state 28

    1 latexstatement: startdoc mainbody . enddoc
    4 mainbody: mainbody . mainoption

    LBEGIN    shift, and go to state 6
    LCURLYB   shift, and go to state 7
    RCURLYB   shift, and go to state 8
    END       shift, and go to state 71
    WORD      shift, and go to state 9
    WS        shift, and go to state 10
    SPECCHAR  shift, and go to state 11
    SECTION   shift, and go to state 12
    SUBSEC    shift, and go to state 13
    TABOCON   shift, and go to state 14
    RENEW     shift, and go to state 15
    PAGENUM   shift, and go to state 16
    ARABIC1   shift, and go to state 17
    LROMAN1   shift, and go to state 18
    CROMAN1   shift, and go to state 19
    LALPH1    shift, and go to state 20
    CALPH1    shift, and go to state 21
    VSPACE    shift, and go to state 22
    HSPACE    shift, and go to state 23
    RM        shift, and go to state 24
    IT        shift, and go to state 25
    NOINDENT  shift, and go to state 26
    REF       shift, and go to state 27

    enddoc          go to state 72
    mainoption      go to state 73
    textoption      go to state 30
    wsorword        go to state 31
    commentoption   go to state 32
    latexoptions    go to state 33
    backsoptions    go to state 34
    beginendopts    go to state 35
    sectionoptions  go to state 36
    tableofcont     go to state 37
    linespacing     go to state 38
    pagenumbers     go to state 39
    pagenuminit     go to state 40
    style1          go to state 41
    spacing         go to state 42
    fonts           go to state 43
    specialchar     go to state 44
    nonewpara       go to state 45
    reference       go to state 46


state 29

    5 mainbody: mainoption .

    $default  reduce using rule 5 (mainbody)


state 30

    6 mainoption: textoption .
    9 textoption: textoption . wsorword

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    WORD      [reduce using rule 6 (mainoption)]
    WS        [reduce using rule 6 (mainoption)]
    $default  reduce using rule 6 (mainoption)

    wsorword  go to state 74


state 31

   10 textoption: wsorword .

    $default  reduce using rule 10 (textoption)


state 32

    7 mainoption: commentoption .

    $default  reduce using rule 7 (mainoption)


state 33

    8 mainoption: latexoptions .

    $default  reduce using rule 8 (mainoption)


state 34

   14 latexoptions: backsoptions .

    $default  reduce using rule 14 (latexoptions)


state 35

   18 backsoptions: beginendopts .

    $default  reduce using rule 18 (backsoptions)


state 36

   19 backsoptions: sectionoptions .

    $default  reduce using rule 19 (backsoptions)


state 37

   20 backsoptions: tableofcont .

    $default  reduce using rule 20 (backsoptions)


state 38

   21 backsoptions: linespacing .

    $default  reduce using rule 21 (backsoptions)


state 39

   22 backsoptions: pagenumbers .

    $default  reduce using rule 22 (backsoptions)


state 40

   23 backsoptions: pagenuminit .

    $default  reduce using rule 23 (backsoptions)


state 41

   81 pagenuminit: style1 . LCURLYB WORD $@1 RCURLYB

    LCURLYB  shift, and go to state 75


state 42

   24 backsoptions: spacing .

    $default  reduce using rule 24 (backsoptions)


state 43

   25 backsoptions: fonts .

    $default  reduce using rule 25 (backsoptions)


state 44

   26 backsoptions: specialchar .

    $default  reduce using rule 26 (backsoptions)


state 45

   27 backsoptions: nonewpara .

    $default  reduce using rule 27 (backsoptions)


state 46

   28 backsoptions: reference .

    $default  reduce using rule 28 (backsoptions)


state 47

   30 begcmds: CENTER .

    $default  reduce using rule 30 (begcmds)


state 48

   31 begcmds: VERBATIM .

    $default  reduce using rule 31 (begcmds)


state 49

   32 begcmds: SINGLE .

    $default  reduce using rule 32 (begcmds)


state 50

   33 begcmds: ITEMIZE .

    $default  reduce using rule 33 (begcmds)


state 51

   34 begcmds: ENUMERATE .

    $default  reduce using rule 34 (begcmds)


state 52

   36 begcmds: TABULAR . begtabularopts

    LCURLYB  shift, and go to state 76

    begtabularopts  go to state 77


state 53

   35 begcmds: TABLE . begtableopts

    LSQRB  shift, and go to state 78

    begtableopts  go to state 79


state 54

   29 beginendopts: LBEGIN begcmds . beginblock endbegin

    LBEGIN  shift, and go to state 6
    WORD    shift, and go to state 9
    WS      shift, and go to state 10
    ITEM    shift, and go to state 80

    textoption    go to state 81
    wsorword      go to state 31
    beginendopts  go to state 82
    beginblock    go to state 83
    listblock     go to state 84
    anitem        go to state 85
    entrylist     go to state 86
    anentry       go to state 87
    entry         go to state 88


state 55

   16 curlyboptions: RM . textoption

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 89
    wsorword    go to state 31


state 56

   17 curlyboptions: IT . textoption

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 90
    wsorword    go to state 31


state 57

   15 latexoptions: LCURLYB curlyboptions . RCURLYB

    RCURLYB  shift, and go to state 91


state 58

    9 textoption: textoption . wsorword
   13 commentoption: SPECCHAR textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    WORD      [reduce using rule 13 (commentoption)]
    WS        [reduce using rule 13 (commentoption)]
    $default  reduce using rule 13 (commentoption)

    wsorword  go to state 74


state 59

   70 sectionoptions: SECTION LCURLYB . textoption RCURLYB

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 92
    wsorword    go to state 31


state 60

   71 sectionoptions: SUBSEC LCURLYB . textoption RCURLYB

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 93
    wsorword    go to state 31


state 61

   73 linespacing: RENEW LCURLYB . BASELINES RCURLYB LCURLYB WORD RCURLYB

    BASELINES  shift, and go to state 94


state 62

   75 style2: ARABIC2 .

    $default  reduce using rule 75 (style2)


state 63

   76 style2: LROMAN2 .

    $default  reduce using rule 76 (style2)


state 64

   77 style2: CROMAN2 .

    $default  reduce using rule 77 (style2)


state 65

   78 style2: LALPH2 .

    $default  reduce using rule 78 (style2)


state 66

   79 style2: CALPH2 .

    $default  reduce using rule 79 (style2)


state 67

   74 pagenumbers: PAGENUM style2 .

    $default  reduce using rule 74 (pagenumbers)


state 68

   88 spacing: VSPACE LCURLYB . WORD $@2 RCURLYB

    WORD  shift, and go to state 95


state 69

   90 spacing: HSPACE LCURLYB . WORD $@3 RCURLYB

    WORD  shift, and go to state 96


state 70

   97 reference: REF LCURLYB . WORD RCURLYB

    WORD  shift, and go to state 97


state 71

    3 enddoc: END . DOCUMENT

    DOCUMENT  shift, and go to state 98


state 72

    1 latexstatement: startdoc mainbody enddoc .

    $default  reduce using rule 1 (latexstatement)


state 73

    4 mainbody: mainbody mainoption .

    $default  reduce using rule 4 (mainbody)


state 74

    9 textoption: textoption wsorword .

    $default  reduce using rule 9 (textoption)


state 75

   81 pagenuminit: style1 LCURLYB . WORD $@1 RCURLYB

    WORD  shift, and go to state 99


state 76

   60 begtabularopts: LCURLYB . COLS RCURLYB

    COLS  shift, and go to state 100


state 77

   36 begcmds: TABULAR begtabularopts .

    $default  reduce using rule 36 (begcmds)


state 78

   59 begtableopts: LSQRB . position RSQRB

    H  shift, and go to state 101
    T  shift, and go to state 102
    B  shift, and go to state 103

    position  go to state 104


state 79

   35 begcmds: TABLE begtableopts .

    $default  reduce using rule 35 (begcmds)


state 80

   51 anitem: ITEM . textoption

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 105
    wsorword    go to state 31


state 81

    9 textoption: textoption . wsorword
   46 beginblock: textoption .
   58 entry: textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    SPECCHAR  reduce using rule 58 (entry)
    DBLBS     reduce using rule 58 (entry)
    $default  reduce using rule 46 (beginblock)

    wsorword  go to state 74


state 82

   45 beginblock: beginendopts .
   52 anitem: beginendopts .
   56 anentry: beginendopts .

    LBEGIN    reduce using rule 52 (anitem)
    LBEGIN    [reduce using rule 56 (anentry)]
    END       reduce using rule 45 (beginblock)
    END       [reduce using rule 52 (anitem)]
    END       [reduce using rule 56 (anentry)]
    WORD      reduce using rule 56 (anentry)
    WS        reduce using rule 56 (anentry)
    CAPTION   reduce using rule 45 (beginblock)
    CAPTION   [reduce using rule 52 (anitem)]
    CAPTION   [reduce using rule 56 (anentry)]
    LABEL     reduce using rule 45 (beginblock)
    LABEL     [reduce using rule 52 (anitem)]
    LABEL     [reduce using rule 56 (anentry)]
    ITEM      reduce using rule 52 (anitem)
    $default  reduce using rule 45 (beginblock)


state 83

   29 beginendopts: LBEGIN begcmds beginblock . endbegin

    END      shift, and go to state 106
    CAPTION  shift, and go to state 107
    LABEL    shift, and go to state 108

    endbegin      go to state 109
    endtableopts  go to state 110
    labelrest     go to state 111


state 84

   48 beginblock: listblock .
   49 listblock: listblock . anitem

    LBEGIN  shift, and go to state 6
    ITEM    shift, and go to state 80

    $default  reduce using rule 48 (beginblock)

    beginendopts  go to state 112
    anitem        go to state 113


state 85

   50 listblock: anitem .

    $default  reduce using rule 50 (listblock)


state 86

   47 beginblock: entrylist .
   53 entrylist: entrylist . anentry

    LBEGIN  shift, and go to state 6
    WORD    shift, and go to state 9
    WS      shift, and go to state 10

    $default  reduce using rule 47 (beginblock)

    textoption    go to state 114
    wsorword      go to state 31
    beginendopts  go to state 115
    anentry       go to state 116
    entry         go to state 88


state 87

   54 entrylist: anentry .

    $default  reduce using rule 54 (entrylist)


state 88

   55 anentry: entry . DBLBS
   57 entry: entry . SPECCHAR textoption

    SPECCHAR  shift, and go to state 117
    DBLBS     shift, and go to state 118


state 89

    9 textoption: textoption . wsorword
   16 curlyboptions: RM textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    $default  reduce using rule 16 (curlyboptions)

    wsorword  go to state 74


state 90

    9 textoption: textoption . wsorword
   17 curlyboptions: IT textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    $default  reduce using rule 17 (curlyboptions)

    wsorword  go to state 74


state 91

   15 latexoptions: LCURLYB curlyboptions RCURLYB .

    $default  reduce using rule 15 (latexoptions)


state 92

    9 textoption: textoption . wsorword
   70 sectionoptions: SECTION LCURLYB textoption . RCURLYB

    RCURLYB  shift, and go to state 119
    WORD     shift, and go to state 9
    WS       shift, and go to state 10

    wsorword  go to state 74


state 93

    9 textoption: textoption . wsorword
   71 sectionoptions: SUBSEC LCURLYB textoption . RCURLYB

    RCURLYB  shift, and go to state 120
    WORD     shift, and go to state 9
    WS       shift, and go to state 10

    wsorword  go to state 74


state 94

   73 linespacing: RENEW LCURLYB BASELINES . RCURLYB LCURLYB WORD RCURLYB

    RCURLYB  shift, and go to state 121


state 95

   88 spacing: VSPACE LCURLYB WORD . $@2 RCURLYB

    $default  reduce using rule 87 ($@2)

    $@2  go to state 122


state 96

   90 spacing: HSPACE LCURLYB WORD . $@3 RCURLYB

    $default  reduce using rule 89 ($@3)

    $@3  go to state 123


state 97

   97 reference: REF LCURLYB WORD . RCURLYB
